@@ -24,6 +24,7 @@ DFHack future
     - lever: list and pull fort levers from the dfhack console.
     - stripcaged: mark items inside cages for dumping, eg caged goblin weapons.
     - soundsense-season: writes the correct season to gamelog.txt on world load.
+    - devel/create-items: spawn items
   New GUI scripts:
     - gui/guide-path: displays the cached path for minecart Guide orders.
     - gui/workshop-job: displays inputs of a workshop job and allows tweaking them.
